payment_redirect_url format changes

--- a/destiin/destiin/doctype/hotel_booking_config/hotel_booking_config.json
+++ b/destiin/destiin/doctype/hotel_booking_config/hotel_booking_config.json
@@ -23,7 +23,7 @@
   },
   {
    "fieldname": "payment_redirect_url",
-   "fieldtype": "URL",
+   "fieldtype": "Data",
    "label": "Payment Redirect URL"
   },
   {
